--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.firebaseui:firebase-ui-storage:0.6.0'
+    implementation 'com.android.support:design:28.0.0'
 }
